# nano

./: .gitignore  Cargo.toml  README.md
.devcontainer/: Dockerfile  couchdb.yaml  devcontainer.json  docker-compose.yaml
examples/debug/: Cargo.toml
examples/debug/src/: main.rs
examples/info/: Cargo.toml
examples/info/src/: main.rs
src/: db_in_use.rs  db_info.rs  db_instance_in_use.rs  error.rs  lib.rs  nano.rs
src/couchdb/: create.rs  destroy.rs  get.rs  info.rs  list.rs  mod.rs
src/couchdb/db_actions/: db_changes.rs  db_doc.rs  db_info.rs  mod.rs
src/database/: database.rs  mod.rs  types.rs
src/database/types/: changes.rs  documents.rs  index.rs  mod.rs  query.rs
