[package]
name = "nano"
version = "0.1.0"
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Crate to interact with Couchdb"
readme = "README.md"
repository = "https://github.com/sergiupopescu199/nano.git"

[workspace]
members = ["examples/*"]


[dependencies]
reqwest = { version = "0.11.5", features = ["json"] }
serde = { version = "1.0.130", features = ["derive"] }
uuid = { version = "0.8.2", features = ["v4"] }
serde_json = "1.0.68"
thiserror = "1.0.30"
