[package]
name = "nano"
version = "0.1.0"
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Crate to interact with Couchdb"
readme = "README.md"
repository = "https://github.com/sergiupopescu199/nano.git"

[features]
color = []

[dependencies]
reqwest = { version = "0.11.5", features = ["json", "stream"] }
serde = { version = "1.0.130", features = ["derive"] }
uuid = { version = "1.1.0", features = ["v4"] }
serde_json = "1.0.68"
thiserror = "1.0.30"
colored_json = "3.0.1"
bevy_reflect = "0.9.1"
anyhow = "1.0.57"
tokio = { version = "1.19.2", features = ["full"] }
futures-util = "0.3"
async-stream = "0.3.3"
async-trait = "0.1.56"


[dev-dependencies]
tokio = { version = "1.19.2", features = ["rt", "macros"] }
