[package]
name = "info"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
serde_json = "1.0.68"
nano = { path = "../..", features = ["color"] }
tokio = { version = "1.12.0", features = ["full"] }
bat = { git = "https://github.com/sharkdp/bat.git", branch = "master" }
# colored_json = "2.1.0"
# serde = { version = "1.0.130", features = ["derive"] }
